# chess-game

./: CMakeLists.txt  README.md  makefile
.zed/: debug.json
src/: board.cpp  board.h  constants.h  drawing.cpp  drawing.h  event_handling.cpp  event_handling.h  game_logic.cpp  game_logic.h  main.cpp  texture.cpp  texture.h  texture_manager.cpp  texture_manager.h  types.h
